fixed layout bugs

--- a/css/_page-about.scss
+++ b/css/_page-about.scss
@@ -2,6 +2,9 @@
     .grid-content {
         @include grid-2;
         gap: $lg;
+        h1 {
+            padding-bottom: $md;
+        }
         .about-content {
             @include type-col-gap(2, $md);
         }
