--- a/css/_page-home.scss
+++ b/css/_page-home.scss
@@ -26,6 +26,10 @@
     @include bg-highlight;
     .grid-content {
         text-align: center;
+        h1,
+        p {
+            padding-bottom: $md;
+        }
         p {
             width: 80%;
             margin: auto;
@@ -57,6 +61,7 @@
     padding: $xl 0 0;
     .grid-content {
         text-align: center;
+        padding-bottom: $md;
     }
     .gallery-container {
         padding: $md 0 0;
@@ -81,6 +86,9 @@
     .grid-content {
         padding: $xl 0;
         text-align: center;
+        h1 {
+            padding-bottom: $md;
+        }
         .blurb-container {
             gap: $md;
             .card {
